# local-data-api

./: Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  pyproject.toml.bak  requirements-dev.txt  setup.cfg.bak  setup.py.bak
