[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
authors = [
    {name = "MarcoPasta"},
]
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pytest-runner",
    "setuptools-scm",
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "pydantic",
    "email-validator",
    "fastapi",
    "SQLAlchemy",
    "PyMySQL",
    "JPype1",
    "JayDeBeApi",
    "psycopg2",
    "pytest>=4.6",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "black",
    "isort",
]   

[project.optional-dependencies]
docs = ["mkdocs", "mkdocs-material"]
wheel = ["wheel", "twine"]
ci = ["codecov"]


